# BF-VIC

./: README.md
src/franka_description/robots/panda/: panda_withHand.urdf  panda_withoutHand_dyn.urdf  panda_withoutHand_kin.urdf
src/franka_example_controllers/: CMakeLists.txt  franka_example_controllers_plugin.xml  package.xml
src/franka_example_controllers/cfg/: admittance_controller.cfg  impedance_controller.cfg  nocontact_impedance_controller.cfg  nullspace_impedance_controller.cfg  robust_controller.cfg
src/franka_example_controllers/config/: franka_example_controllers.yaml  nullSpace.xml
src/franka_example_controllers/include/franka_example_controllers/: admittance_controller.h  admittance_dyn_controller.h  cartesian_impedance_controller.h  hps_ftc_lib.h  hps_sensor.h  joint_impedance_controller.h  nocontact_impedance_controller.h  nullspace_impedance_EBobserver_controller.h  nullspace_impedance_MBobserver_controller.h  nullspace_impedance_controller.h  pinocchino_interactive.h  pseudo_inversion.h  robust_controller.h  trajectory.h
src/franka_example_controllers/launch/: admittance_controller.launch  admittance_dyn_controller.launch  cartesian_impedance_controller.launch  importURDF.launch  joint_impedance_controller.launch  nocontact_impedance_controller.launch  nullspace_impedance_EBobserver_controller.launch  nullspace_impedance_MBobserver_controller.launch  nullspace_impedance_controller.launch  plot.launch  robust_controller.launch  showRobot.launch
src/franka_example_controllers/lib/linux_x32/: libhps_ftc.so.1  libhps_ftc.so.1.0.0
src/franka_example_controllers/lib/linux_x64/: libhps_ftc.so.1.0.0
src/franka_example_controllers/msg/: paramForDebug.msg
src/franka_example_controllers/src/: pinocchino_interactive.cpp  trajectory.cpp
src/franka_example_controllers/src/nocontact_impedance/: nocontact_impedance_controller.cpp
